--- a/JYImageTextCombine/Podfile
+++ b/JYImageTextCombine/Podfile
@@ -1,8 +1,10 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '12.0'
 
 target 'JYImageTextCombine' do
 
     pod 'AFNetworking'
+    pod 'SVProgressHUD'
 
 end
+
